# app-launcher

./: README.md  apps.json  launcher.bat  launcher.vbs  main.py  makefile  pyproject.toml  requirements.txt  setup.py
